# compose-viz

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compose-viz-test.gv  naming.py  pyproject.toml  requirements.txt  update-submodules.py
.github/workflows/: cd.yml  ci.yml  cron.yml  release-docker-image.yml  release-tagged-version.yml  update-submodules.yml
compose_viz/: __init__.py  __main__.py  cli.py  compose.py  extends.py  graph.py  parser.py  port.py  service.py  volume.py
compose_viz/models/: compose.py  device.py  extends.py  port.py  service.py  viz_formats.py  volume.py
compose_viz/spec/: compose_spec.py
examples/full-stack-node-app/: common-services.yml  docker-compose.yml  postgres.yml
examples/non-normative/: docker-compose.yml
examples/voting-app/: docker-compose.yml
tests/: test_cli.py  test_devices.py  test_extends.py  test_module.py  test_parse_file.py  test_parser.py  test_port.py  test_root_service.py  test_service.py  test_validate_input_file.py  test_version.py  test_volume.py  validate_input_file.py
tests/in/: 000001.yaml  000010.yaml  000011.yaml  000100.yaml  000101.yaml  000110.yaml  000111.yaml  001000.yaml  001001.yaml  001010.yaml  001011.yaml  001100.yaml  001101.yaml  001110.yaml  001111.yaml  010000.yaml  010001.yaml  010010.yaml  010011.yaml  010100.yaml  010101.yaml  010110.yaml  010111.yaml  011000.yaml  011001.yaml  011010.yaml  011011.yaml  011100.yaml  011101.yaml  011110.yaml  011111.yaml  100000.yaml  100001.yaml  100010.yaml  100011.yaml  100100.yaml  100101.yaml  100110.yaml  100111.yaml  101000.yaml  (+25 more)
tests/ymls/builds/: docker-compose.yml
tests/ymls/cgroup_parent/: docker-compose.yml
tests/ymls/container_name/: docker-compose.yml
tests/ymls/depends_on/: docker-compose.yml
tests/ymls/devices/: docker-compose.yml
tests/ymls/env_file/: docker-compose.yml
tests/ymls/expose/: docker-compose.yml
tests/ymls/extends/: docker-compose.yml  web.yml
tests/ymls/links/: docker-compose.yml
tests/ymls/networks/: docker-compose.yml
tests/ymls/others/: no-services.yml
tests/ymls/ports/: docker-compose.yml
tests/ymls/profiles/: docker-compose.yml
tests/ymls/volumes/: docker-compose.yml
