[tool.poetry]
name = "compose-viz"
version = "0.2.0"
description = "A compose file visualization tool that supports compose-spec and allows you to gernerate graph in several formats."
authors = ["Xyphuz Wu <xyphuzwu@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/compose-viz/compose-viz"
repository = "https://github.com/compose-viz/compose-viz"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.1"
PyYAML = "^6.0"
graphviz = "^0.20"
"ruamel.yaml" = "^0.17.21"
pydantic-yaml = "^0.6.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.19.0"
coverage = "^6.3.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cpv = "compose_viz.cli:start_cli"

[tool.coverage.run]
source = ["compose_viz"]
omit = ["compose_viz/spec/*"]
