[tool.poetry]
name = "compose-viz"
version = "0.3.4"
description = "A compose file visualization tool that supports compose-spec and allows you to gernerate graph in several formats."
authors = ["Xyphuz Wu <xyphuzwu@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/compose-viz/compose-viz"
repository = "https://github.com/compose-viz/compose-viz"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.1"
graphviz = "^0.20"
pydantic-yaml = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.2"
pre-commit = "^3.7.0"
coverage = "^7.5.0"
pytest-cov = "^5.0.0"
datamodel-code-generator = "^0.25.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cpv = "compose_viz.cli:start_cli"

[tool.coverage.run]
source = ["compose_viz"]
omit = ["compose_viz/spec/*"]
